--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGlBuild.loader.js";
+      var loaderUrl = buildUrl + "/Corra-e-Calcule-Unity.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGlBuild.data",
-        frameworkUrl: buildUrl + "/WebGlBuild.framework.js",
-        codeUrl: buildUrl + "/WebGlBuild.wasm",
+        dataUrl: buildUrl + "/Corra-e-Calcule-Unity.data",
+        frameworkUrl: buildUrl + "/Corra-e-Calcule-Unity.framework.js",
+        codeUrl: buildUrl + "/Corra-e-Calcule-Unity.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Hii Games",
         productName: "Math Runner",
